feat: update .gitignore and enhance network calibration scripts; add new functions for transport key handling and simulation

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ Docs/resumen_estado_modulo_actual.md
 tools/filter_getprop_qcom_wifi.py
 tools/filter_wifi_dump.py
 tools/merge_wifi_profiles.py
+Docs/qosFlowMVP.md
